[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.badabump]
version_type = "semver"

[tool.black]
line_length = 79
target_version = ["py38"]

[tool.coverage.run]
branch = true
source = ["aiohttp_middlewares"]

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "@abstractmethod",
  "@overload",
]
omit = [
  "src/*/__main__.py",
  "src/*/annotations.py",
]
fail_under = 95
skip_covered = true
show_missing = true

[tool.isort]
profile = "attrs"
combine_as_imports = true
force_alphabetical_sort_within_sections = true
lines_between_types = 0
src_paths = ["src/"]
virtual_env = ".venv/"

[tool.mypy]
allow_untyped_globals = true
check_untyped_defs = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
exclude = ["docs/", "migrations/", "tests/"]
follow_imports = "normal"
follow_imports_for_stubs = true
ignore_missing_imports = false
namespace_packages = true
no_implicit_optional = true
mypy_path = "src/"
python_executable = ".venv/bin/python3"
show_column_numbers = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.poetry]
name = "aiohttp-middlewares"
version = "2.4.0"
description = "Collection of useful middlewares for aiohttp applications."
authors = ["Igor Davydenko <iam@igordavydenko.com>"]
license = "BSD-3-Clause"
readme = "README.rst"
homepage = "https://igordavydenko.com/projects.html#aiohttp-middlewares"
repository = "https://github.com/playpauseandstop/aiohttp-middlewares"
documentation = "https://aiohttp-middlewares.readthedocs.io/"
packages = [
  {include = "aiohttp_middlewares", from = "src/"},
]
keywords = ["aiohttp", "aiohttp-server", "middlewares", "aiohttp-middlewares"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: aiohttp",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
  "Topic :: Utilities",
  "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"
async-timeout = "^4.0.2"
yarl = "^1.5.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"

[tool.poetry.group.docs.dependencies]
furo = "^2024.8.6"
sphinx = "^7.1.2"
sphinx-autobuild = "^2021.3.14"
sphinx-autodoc-typehints = "^2.0.1"
sphinx-copybutton = "^0.5.2"
sphinxext-opengraph = "^0.7.5"

[tool.poetry.group.test.dependencies]
coverage = "^6.5.0"
coveralls = "^3.3.1"
pytest = "^8.3.2"
pytest-aiohttp = "^1.0.5"
pytest-asyncio = "^0.23.8"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
minversion = "7.2.0"
addopts = "--cov --no-cov-on-fail"
testpaths = ["tests/"]
log_level = "info"
# Local settings
asyncio_mode = "auto"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38,py39,py310,py310-minimum-requirements,py311,py312,py313
skipsdist = True

[gh-actions]
python =
  3.8: py38
  3.9: py39
  3.10: py310
  3.11: py311
  3.12: py312
  3.13: py313

[testenv]
allowlist_externals = poetry
passenv =
  PYTEST_ADDOPTS
skip_install = True
commands_pre =
  poetry install --only main,test
commands =
  python3 -m pytest

# Python 3.10 is last version with aiohttp, async-timeout, and yarl wheels
[testenv:py310-minimum-requirements]
commands_pre =
  poetry install --only main,test
  python3 -m pip install aiohttp==3.8.1 async-timeout==4.0.2 yarl==1.5.1
"""
